Deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: myapp

spec:

  selector:

    matchLabels:

      app: myapp

  template:

    metadata:

      labels:

        app: myapp

    spec:

      containers:

      - name: myapp

        image: harishoo7/glams

        resources:

          limits:

            memory: "128Mi"

            cpu: "500m"

        ports:

        - containerPort: 80
