Service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: jenkins
  labels:
    run: jenkins
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 80
    protocol: TCP
    name: http
  
  selector:
    run: jenkins
